--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@plugin "@nauverse/tailwind-dot-grid-backgrounds";
 
 @custom-variant dark (&:is(.dark *));
 
